# python-guis

./: .gitignore  LICENSE.txt  README.md  _config.yml  azure-pipelines.yml  environment.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: cheatsheet.md  installation.md  usage.md
docs/cheatsheet_docs/: documentation.md  examples.md  gui_installation.md  widgets.md
junit/: test-results.xml
python_guis/: CREDITS  MWE.ipynb  __init__.py  beetle.kv  buttons.ipynb  cheatsheet.md  figure_actions_manager.py  gui_jupyter_widgets.ipynb  gui_kivy.py  gui_tkinter.py  gui_tkinter_lite.py  hello.kv  labels.ipynb  model.py  mwe_jupyter_widgets.ipynb  mwe_kivy.py  mwe_kivy_with_kv.py  mwe_tkinter.py  plot_jupyter_widgets.ipynb  plot_kivy.py  script.py
python_guis/jupyter_widgets/: gui_jupyter_widgets.ipynb  plot_jupyter_widgets.ipynb
python_guis/kivy/: beetle.kv  gui_kivy.py  mwe_kivy.py  mwe_kivy_with_kv.py
python_guis/pyside/: gui_pyside.py  mwe_pyside.py  plot_pyside.py
python_guis/tkinter/: mwe_tkinter.py  plot_tkinter.py  thread2_tkinter.py  thread_tkinter.py
tests/: test_python_guis.py
