[tool.poetry]
name = "python_guis"
version = "0.0.1"
description = "GUI exemplars"
license = "MIT"
authors = [
    "Research Computing Service, Imperial College London <rcs-support@imperial.ac.uk>"
]
readme = "README.md"
repository = "https://github.com/ImperialCollegeLondon/python-guis"

[tool.poetry.dependencies]
python = "^3.7"
kivy = {version = "^1.11",optional = true}
matplotlib = "^3.1"

[tool.poetry.extras]
kivy = ["kivy"]


[tool.black]
exclude = '\.venv/|\.eggs/'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
