[tool.poetry]
name = "PythonGUIs"
version = "0.0.1"
description = "GUI exemplars"
license = "MIT"
authors = [
    "Research Computing Service, Imperial College London <rcs-support@imperial.ac.uk>"
]
readme = "README.md"
repository = "https://github.com/ImperialCollegeLondon/python-guis"

packages = [{include = "python_guis"}]

[tool.poetry.dependencies]
#python = "^3.7"
kivy = "^1.11"
matplotlib = "^3.1"
scikit-image = "^0.15.0"
kivy-garden = "^0.1.4"
requests = "^2.22"
flake8 = "^3.7"
jupyter = "^1.0"


[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-flake8 = "^1.0"
pytest-mypy = "^0.3.3"
[tool.black]
exclude = '\.venv/|\.eggs/'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
